# kdeep

./: .gitignore  CMakeLists.txt  README.md  build.sh
include/: deepseekconfigpage.hpp  kdeepconfig.hpp  networkmanager.hpp  plugin.hpp
src/: deepseekconfigpage.cpp  kdeep.json  kdeepconfig.cpp  kdeepseek.json  networkmanager.cpp  plugin.cpp
